# FootballManager

./: .travis.yml  README.md  patTest.txt
PatsPractice/: CMakeLists.txt  main.cpp
class_practice.Niam/: CMakeLists.txt
class_practice.Pat/: CMakeLists.txt  classpractice.cpp  classpractice.hpp  main.cpp
data/: afcb.data  ars.data  bhalbion.data  burn.data  che.data  epl.data  eve.data  fgd.data  hud.data  lei.data  liv.data  manc.data  manu.data  new.data  pal.data  sot.data  sto.data  swa.data  tot.data  wat.data  wba.data  whu.data
doc/: tasks_Niam.org  tasks_Patrick.org
doc/agile/: product_backlog.org  sprint_00.Niam.org  sprint_00.Patrick.org  sprint_01.Niam.org  sprint_01.Patrick.org
projects/football_manager.game/: CMakeLists.txt  choose_player.cpp  choose_player.hpp  choose_teams.cpp  choose_teams.hpp  club.cpp  club.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  league.cpp  league.hpp  main.cpp  match.cpp  match.hpp  match_day.cpp  match_day.hpp  menu.cpp  menu.hpp  menu_item.cpp  menu_item.hpp  player.cpp  player.hpp  players.cpp  players.hpp  season.cpp  season.hpp  squad.cpp  squad.hpp  standings_table.cpp  standings_table.hpp  standings_table_entry.cpp  standings_table_entry.hpp  table.cpp  table.hpp  team.cpp  team.hpp  team_management.cpp  team_management.hpp  (+2 more)
projects/football_manager.models/: FootballGameDia.dia  football_manager.game.dia  football_manager.game.dia.autosave  football_manager.menu.dia  uml.dia
projects/football_manager.sample_game/: CMakeLists.txt  league.cpp  league.hpp  main.cpp  player.cpp  player.hpp  team.cpp  team.hpp
projects/niam_practice/class_practice.Niam/: class.cpp  class.hpp  main.cpp
projects/niam_practice/football_backup.game/: CMakeLists.txt  league.cpp  league.hpp  menu_item.hpp  player.hpp  standings_table.cpp  standings_table.hpp  table.cpp  table.hpp  team.cpp
projects/niam_practice/football_manager_old.game/: CMakeLists.txt  choose_teams.hpp
projects/niam_practice/football_manager_old_practice.game/: menu.cpp  menu.hpp  player.cpp  team.hpp
projects/niam_practice/football_manager_practice.game/: CMakeLists.txt  league.cpp  main.cpp  team.cpp  team.hpp
projects/niam_practice/football_practice.game/: main.cpp  table.cpp  table.hpp  team.hpp
projects/niam_practice/pointer_array.Niam/: main.cpp
projects/niam_practice/pointer_class.Niam/: main.cpp
projects/niam_practice/pointer_employee.Niam/: CMakeLists.txt
(+36 files in other folders)
